--- a/Yunt/Dtsc.NodeService/appsettings.json
+++ b/Yunt/Dtsc.NodeService/appsettings.json
@@ -1,68 +1,27 @@
 ﻿{
-
-  "connectionStrings": {
+  "ConnectionStrings": {
     "yunt.dtsc": {
-      "providerName": "MySql.Data.MySqlClient",
-      "connectionString": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_dtsc;uid=wdd;pwd=Unitoon2018"
-
+      "connectionString": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_dtsc;uid=wdd;pwd=Unitoon2018",
+      "providerName": "MySql.Data.MySqlClient"
     },
     "unitooniot_analysis": {
-      "providerName": "System.Data.SqlClient",
-      "connectionString": "Password=U2n0i1t7oon;Persist Security Info=True;User ID=xenomorph;Initial Catalog=unitooniot_analysis;Data Source=rm-bp1e7cw4xl2ns45aoo.sqlserver.rds.aliyuncs.com,3433;MultipleActiveResultSets=true;"
-
+      "connectionString": "Password=U2n0i1t7oon;Persist Security Info=True;User ID=xenomorph;Database=unitooniot_analysis;Server=rm-bp1e7cw4xl2ns45aoo.sqlserver.rds.aliyuncs.com,3433;MultipleActiveResultSets=true;",
+      "providerName": "System.Data.SqlClient"
     },
     "unitooniot_configmanager": {
-      "providerName": "System.Data.SqlClient",
-      "connectionString": "Password=U2n0i1t7oon;Persist Security Info=True;User ID=xenomorph;Initial Catalog=unitooniot_configmanager;Data Source=rm-bp1e7cw4xl2ns45aoo.sqlserver.rds.aliyuncs.com,3433;MultipleActiveResultSets=true;"
-
+      "connectionString": "Password=U2n0i1t7oon;Persist Security Info=True;User ID=xenomorph;Database=unitooniot_configmanager;Server=rm-bp1e7cw4xl2ns45aoo.sqlserver.rds.aliyuncs.com,3433;MultipleActiveResultSets=true;",
+      "providerName": "System.Data.SqlClient"
     }
   },
   "AppSettings": {
     "NodeId": 1,
-    "JobPath": "G:\\2018\\Yunt\\Yunt\\Yunt.Jobs", // /data1/dtsc/jobs
+    "JobPath": "G:\\2018\\Yunt\\Yunt\\Yunt.Jobs",
     "Dtsc": {
-      "RedisConn": "127.0.0.1:26125", //47.97.5.85:6381
-      //"MySqlConn": "server=10.1.5.25;port=3306;database=yunt_device;uid=root;pwd=unitoon2017;",
+      "RedisConn": "119.23.243.83",
+      "RedisPort": 26125,
       "RedisPwd": "Unitoon2018"
     },
-    //All = 0, "Debug" "=",1,"Info" "=",2,"Warn" "=",3, "Error" "=",4,"Fatal" "=",5, "Off" "=",255
-    "LogLevel": "3",
-    "PerformanceInverval": "60"
-  },
-
-  "Logging": {
-    "IncludeScopes": true,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  },
-  //写本地log文件
-  //已创建logger的categoryName区分配置。可配置多规则多文件写入
-  "FileLogging": {
-    // 相对路径：log:current path+'\log'
-    // 绝对路径：C://log
-    // linux 绝对路径：/var/log/netcorewebapp
-    //多环境部署，可以使用环境变量配置文件方式。
-    "DefaultPath": "log", //默认文件地址
-    "DefaultMaxMB": 500, //默认最大文件大小
-    "DefaultFileName": "yyyyMMdd", //默认文件名字
-    "DefaultRollingType": "Day", //默认文件新建方式
-    //过滤器，以.分割，逐层匹配
-    "LogLevel": {
-      "Default": "Information",
-      "System": "Information",
-      "Microsoft": "Information",
-      "Dtsc.NodeService": "Debug"
-    },
-    //log需要写入的文件。
-    "Path": {
-      "service": "log/service"
-    },
-    //log名字
-    "FileName": {
-      "service": "yyyyMMddHH"
-    }
+    "LogLevel":3,
+    "PerformanceInverval": 60
   }
 }
