--- a/Yunt/Dtsc.NodeService/appsettings.json
+++ b/Yunt/Dtsc.NodeService/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "yunt.dtsc": {
-      "connectionString": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_dtsc;uid=wdd;pwd=Unitoon2018",
+      "connectionString": "server=127.0.0.1;port=3306;database=yunt_dtsc;uid=wdd;pwd=******",
       "providerName": "MySql.Data.MySqlClient"
     },
     "unitooniot_analysis": {
@@ -17,9 +17,9 @@
     "NodeId": 1,
     "JobPath": "G:\\2018\\Yunt\\Yunt\\Yunt.Jobs",
     "Dtsc": {
-      "RedisConn": "119.23.243.83",
+      "RedisConn": "127.0.0.1",
       "RedisPort": 26125,
-      "RedisPwd": "Unitoon2018"
+      "RedisPwd": "******"
     },
     "LogLevel":3,
     "PerformanceInverval": 60
