--- a/Yunt/Yunt.Demo.ConsoleApp1/appsettings.json
+++ b/Yunt/Yunt.Demo.ConsoleApp1/appsettings.json
@@ -2,13 +2,13 @@
   "AppSettings": {
     "connectionStrings": [
       {
-        "name": "yunt.dtsc",
+        "name": "gbat.dtsc",
         "providerName": "mysql.data",
-        "connectionString": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_dtsc;uid=wdd;pwd=Unitoon2018"
+        "connectionString": "server=127.0.0.1;port=3306;database=gbat_dtsc;uid=wdd;pwd=******"
 
       },
       {
-        "name": "yunt.dtsc1",
+        "name": "gbat.dtsc1",
         "providerName": "mysql.data1",
         "connectionString": "1"
 
@@ -17,28 +17,28 @@
     "Auth": {
       "IsStop": false,
       "RedisConn": "127.0.0.1:6379",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_auth;uid=wdd;pwd=Unitoon2018;",
-      "RedisPwd": "Unitoon2018"
+      "MySqlConn": "server=127.0.0.1;port=3306;database=gbat_auth;uid=wdd;pwd=******;",
+      "RedisPwd": "******"
     },
     "Device": {
       "RedisConn": "127.0.0.1:6379",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;",
-      "RedisPwd": "Unitoon2018"
+      "MySqlConn": "server=127.0.0.1;port=3306;database=gbat_device;uid=wdd;pwd=******;",
+      "RedisPwd": "******"
     },
     "Inventory": {
       "RedisConn": "127.0.0.1:6379",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_inventory;uid=wdd;pwd=Unitoon2018;",
-      "RedisPwd": "Unitoon2018"
+      "MySqlConn": "server=127.0.0.1;port=3306;database=gbat_inventory;uid=wdd;pwd=******;",
+      "RedisPwd": "******"
     },
     "Xml": {
-      "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125",
+      "MySqlConn": "server=127.0.0.1;port=3306;database=gbat_xml;uid=wdd;pwd=******;",
+      "RedisPwd": "******"
     },
     "Analysis": {
-      "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_analysis;uid=wdd;pwd=Unitoon2018;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125",
+      "MySqlConn": "server=127.0.0.1;port=3306;database=gbat_analysis;uid=wdd;pwd=******;",
+      "RedisPwd": "******"
     }
   }
 }
