--- a/Yunt/Yunt.IDA/appsettings.json
+++ b/Yunt/Yunt.IDA/appsettings.json
@@ -4,29 +4,29 @@
 
     "Auth": {
       "IsStop": false,
-      "RedisConn": "119.23.243.83:26125", //26125//6379
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_auth;uid=wdd;pwd=Unitoon2018;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125", //26125//6379
+      "MySqlConn": "server=127.0.0.1;port=3306;database=yunt_auth;uid=wdd;pwd=******;",
+      "RedisPwd": "******"
     },
     "Device": {
-      "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125",
+      "MySqlConn": "server=127.0.0.1;port=3306;database=yunt_device;uid=wdd;pwd=******;",
+      "RedisPwd": "******"
     },
     "Inventory": {
-      "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_inventory;uid=wdd;pwd=Unitoon2018;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125",
+      "MySqlConn": "server=127.0.0.1;port=3306;database=yunt_inventory;uid=wdd;pwd=******;",
+      "RedisPwd": "******"
     },
     "Xml": {
-      "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125",
+      "MySqlConn": "server=127.0.0.1;port=3306;database=yunt_xml;uid=wdd;pwd=******;",
+      "RedisPwd": "******"
     },
     "Analysis": {
-      "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_analysis;uid=wdd;pwd=Unitoon2018;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125",
+      "MySqlConn": "server=127.0.0.1;port=3306;database=yunt_analysis;uid=wdd;pwd=******;",
+      "RedisPwd": "******"
     },
     "MqDealEnable": true,
     "MailList": "wubo@unitoon.cn,xuzh@unitoon.cn,yujf@sari.ac.cn,dongb@unitoon.cn,shuhr@unitoon.cn,liz@unitoon.cn,huangdb@unitoon.cn,lic@unitoon.cn,liumm@unitoon.cn"
