--- a/Yunt/Yunt.WebApi/appsettings.json
+++ b/Yunt/Yunt.WebApi/appsettings.json
@@ -2,9 +2,9 @@
   "InfluxDB": {
     "IsOpen": true,
     "DataBaseName": "AppMetricsDemo",
-    "ConnectionString": "http://192.168.6.250:8086",
+    "ConnectionString": "http://127.0.0.1:8086",
     "username": "root",
-    "password": "Unitoon2018",
+    "password": "******",
     "app": "RepairApp",
     "env": "stage"
   },
@@ -25,32 +25,32 @@
   "AppSettings": {
     "ShiftStartHour": 8,
     "ShiftEndHour": 8,
-    "Url": "119.23.243.83",
+    "Url": "127.0.0.1",
     "DllPath": "G:\\2018\\Yunt\\Yunt\\commondll\\netcoreapp2.1", // /data1/services/apicommon
     "Auth": {
-      "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_auth;uid=wdd;pwd=Unitoon2018;Connection Lifetime=10;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125",
+      "MySqlConn": "server=127.0.0.1;port=3306;database=yunt_auth;uid=wdd;pwd=******;Connection Lifetime=10;",
+      "RedisPwd": "******"
     },
     "Device": {
-      "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;Connection Lifetime=10;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125",
+      "MySqlConn": "server=127.0.0.1;port=3306;database=yunt_device;uid=wdd;pwd=******;Connection Lifetime=10;",
+      "RedisPwd": "******"
     },
     "Inventory": {
-      "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_inventory;uid=wdd;pwd=Unitoon2018;Connection Lifetime=10;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125",
+      "MySqlConn": "server=127.0.0.1;port=3306;database=yunt_inventory;uid=wdd;pwd=******;Connection Lifetime=10;",
+      "RedisPwd": "******"
     },
     "Xml": {
-      "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;Connection Lifetime=10;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125",
+      "MySqlConn": "server=127.0.0.1;port=3306;database=yunt_xml;uid=wdd;pwd=******;Connection Lifetime=10;",
+      "RedisPwd": "******"
     },
     "Analysis": {
-      "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_analysis;uid=wdd;pwd=Unitoon2018;Connection Lifetime=10;",
-      "RedisPwd": "Unitoon2018"
+      "RedisConn": "127.0.0.1:26125",
+      "MySqlConn": "server=127.0.0.1;port=3306;database=yunt_analysis;uid=wdd;pwd=******;Connection Lifetime=10;",
+      "RedisPwd": "******"
     }
   },
 
